# test-assignment-fintech

./: .dockerignore  .env.example  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  pyproject.toml  test-assignment.md
alembic/: env.py
alembic/versions/: 642dc06f12db_init_directory_tables.py  bfff63daab90_init_directory_tables.py
docs/: README.ru.md  test-assignment.en.md  test-assignment.md  test-assignment.ru.md
scripts/: _dev_db.py  reset_dev_db.py  seed_dev_db.py
src/: app.py  config.py  database.py  dependencies.py  main.py
src/api/: security.py
src/api/v1/: constants.py  directory.py  schema.py
src/dto/: __init__.py  dto.py
src/repository/directory/: __init__.py  abstract.py
src/repository/directory/postgres/: __init__.py  model.py  repository.py
src/service/: __init__.py  abstract.py  service.py
tests/: conftest.py
tests/integration/: conftest.py  test_buildings_api.py  test_organizations_api.py  test_organizations_filters_api.py
tests/integration/factories/: __init__.py  building_factory.py
tests/integration/fixtures/: __init__.py  db.py
tests/integration/test_api/v1/: test_buildings_api.py  test_organizations_api.py  test_organizations_filters_api.py
